add graph capture for webgpu
pass device and instance to webgpu provider

initialize dawn

CopyDeviceToCpu/CopyCpuToDevice support

fix

fix errors

fix nullptr error

add dxc libraries

use device memory for intpus only if graph capture is enabled

Delete useless files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -146,6 +146,290 @@ target_link_libraries(onnxruntime-genai PRIVATE onnxruntime_extensions)
 target_link_directories(onnxruntime-genai PRIVATE ${ORT_LIB_DIR})
 target_link_libraries(onnxruntime-genai PRIVATE Threads::Threads)
 
+# Configure WebGPU support if enabled
+if(USE_WEBGPU)
+  message(STATUS "WebGPU support enabled")
+
+  # Dawn WebGPU library paths
+  set(DAWN_ROOT "C:/Users/jiajiaqin/workspace/dawn")
+
+  # Set build directory based on CMAKE_BUILD_TYPE
+  if(CMAKE_BUILD_TYPE STREQUAL "Debug")
+    set(DAWN_BUILD_DIR "${DAWN_ROOT}/out/Debug")
+    set(DAWN_LIB_SUBDIR "Debug")
+    message(STATUS "Using Dawn Debug libraries")
+  else()
+    set(DAWN_BUILD_DIR "${DAWN_ROOT}/out/Release")
+    set(DAWN_LIB_SUBDIR "Release")
+    message(STATUS "Using Dawn Release libraries")
+  endif()
+
+  # Check if Dawn is available
+  if(NOT EXISTS "${DAWN_BUILD_DIR}")
+    message(FATAL_ERROR "Dawn build directory not found at ${DAWN_BUILD_DIR}. Please build Dawn first.")
+  endif()
+
+  # Dawn include directories
+  target_include_directories(onnxruntime-genai PRIVATE
+    "${DAWN_ROOT}/include"
+    "${DAWN_BUILD_DIR}/gen/include"
+  )
+
+  # Use direct library paths - all Dawn/Tint/Abseil dependencies
+  set(DAWN_LIBRARIES
+    # Dawn libraries
+    "${DAWN_BUILD_DIR}/src/dawn/common/${DAWN_LIB_SUBDIR}/dawn_common.lib"
+    "${DAWN_BUILD_DIR}/src/dawn/${DAWN_LIB_SUBDIR}/dawn_proc.lib"
+    "${DAWN_BUILD_DIR}/src/dawn/glfw/${DAWN_LIB_SUBDIR}/dawn_glfw.lib"
+    "${DAWN_BUILD_DIR}/src/dawn/native/${DAWN_LIB_SUBDIR}/dawn_native.lib"
+    "${DAWN_BUILD_DIR}/src/dawn/native/dawn_native_objects.dir/${DAWN_LIB_SUBDIR}/dawn_native_objects.lib"
+    "${DAWN_BUILD_DIR}/src/dawn/platform/${DAWN_LIB_SUBDIR}/dawn_platform.lib"
+    "${DAWN_BUILD_DIR}/src/dawn/utils/${DAWN_LIB_SUBDIR}/dawn_system_utils.lib"
+    "${DAWN_BUILD_DIR}/src/dawn/utils/${DAWN_LIB_SUBDIR}/dawn_test_utils.lib"
+    "${DAWN_BUILD_DIR}/src/dawn/utils/${DAWN_LIB_SUBDIR}/dawn_wgpu_utils.lib"
+    "${DAWN_BUILD_DIR}/src/dawn/wire/${DAWN_LIB_SUBDIR}/dawn_wire.lib"
+
+    # Tint API and core libraries
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_api.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_api_common.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_cmd_common.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_cmd_fuzz_ir_helpers.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_lang_core.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_lang_core_constant.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_lang_core_intrinsic.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_lang_core_ir.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_lang_core_ir_analysis.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_lang_core_ir_binary.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_lang_core_ir_transform.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_lang_core_ir_type.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_lang_core_type.lib"
+
+    # Tint WGSL support
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_lang_wgsl.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_lang_wgsl_ast.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_lang_wgsl_inspector.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_lang_wgsl_intrinsic.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_lang_wgsl_ir.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_lang_wgsl_program.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_lang_wgsl_reader.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_lang_wgsl_reader_lower.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_lang_wgsl_reader_parser.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_lang_wgsl_reader_program_to_ir.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_lang_wgsl_resolver.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_lang_wgsl_sem.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_lang_wgsl_writer.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_lang_wgsl_writer_ast_printer.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_lang_wgsl_writer_ir_to_program.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_lang_wgsl_writer_raise.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_lang_wgsl_writer_syntax_tree_printer.lib"
+
+    # Tint SPIRV support
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_lang_spirv.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_lang_spirv_intrinsic.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_lang_spirv_ir.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_lang_spirv_reader.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_lang_spirv_reader_ast_lower.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_lang_spirv_reader_ast_parser.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_lang_spirv_reader_common.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_lang_spirv_reader_lower.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_lang_spirv_reader_parser.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_lang_spirv_type.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_lang_spirv_validate.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_lang_spirv_writer.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_lang_spirv_writer_common.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_lang_spirv_writer_helpers.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_lang_spirv_writer_printer.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_lang_spirv_writer_raise.lib"
+
+    # Tint HLSL support
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_lang_hlsl.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_lang_hlsl_intrinsic.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_lang_hlsl_ir.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_lang_hlsl_type.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_lang_hlsl_validate.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_lang_hlsl_writer.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_lang_hlsl_writer_common.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_lang_hlsl_writer_helpers.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_lang_hlsl_writer_printer.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_lang_hlsl_writer_raise.lib"
+
+    # Tint GLSL support
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_lang_glsl.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_lang_glsl_intrinsic.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_lang_glsl_ir.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_lang_glsl_validate.lib"
+
+    # Tint MSL support
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_lang_msl.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_lang_msl_intrinsic.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_lang_msl_ir.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_lang_msl_ir_transform.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_lang_msl_type.lib"
+
+    # Tint utility libraries
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_utils.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_utils_bytes.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_utils_command.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_utils_containers.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_utils_diagnostic.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_utils_file.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_utils_ice.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_utils_macros.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_utils_math.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_utils_memory.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_utils_protos_ir_fuzz_proto.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_utils_protos_ir_proto.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_utils_rtti.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_utils_strconv.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_utils_symbol.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_utils_system.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_utils_text.lib"
+    "${DAWN_BUILD_DIR}/src/tint/${DAWN_LIB_SUBDIR}/tint_utils_text_generator.lib"
+
+    # Abseil base libraries
+    "${DAWN_BUILD_DIR}/third_party/abseil/absl/base/${DAWN_LIB_SUBDIR}/absl_base.lib"
+    "${DAWN_BUILD_DIR}/third_party/abseil/absl/base/${DAWN_LIB_SUBDIR}/absl_log_severity.lib"
+    "${DAWN_BUILD_DIR}/third_party/abseil/absl/base/${DAWN_LIB_SUBDIR}/absl_malloc_internal.lib"
+    "${DAWN_BUILD_DIR}/third_party/abseil/absl/base/${DAWN_LIB_SUBDIR}/absl_raw_logging_internal.lib"
+    "${DAWN_BUILD_DIR}/third_party/abseil/absl/base/${DAWN_LIB_SUBDIR}/absl_spinlock_wait.lib"
+    "${DAWN_BUILD_DIR}/third_party/abseil/absl/base/${DAWN_LIB_SUBDIR}/absl_strerror.lib"
+    "${DAWN_BUILD_DIR}/third_party/abseil/absl/base/${DAWN_LIB_SUBDIR}/absl_throw_delegate.lib"
+
+    # Abseil container libraries
+    "${DAWN_BUILD_DIR}/third_party/abseil/absl/container/${DAWN_LIB_SUBDIR}/absl_hashtablez_sampler.lib"
+    "${DAWN_BUILD_DIR}/third_party/abseil/absl/container/${DAWN_LIB_SUBDIR}/absl_raw_hash_set.lib"
+
+    # Abseil hash libraries
+    "${DAWN_BUILD_DIR}/third_party/abseil/absl/hash/${DAWN_LIB_SUBDIR}/absl_city.lib"
+    "${DAWN_BUILD_DIR}/third_party/abseil/absl/hash/${DAWN_LIB_SUBDIR}/absl_hash.lib"
+    "${DAWN_BUILD_DIR}/third_party/abseil/absl/hash/${DAWN_LIB_SUBDIR}/absl_low_level_hash.lib"
+
+    # Abseil debugging libraries
+    "${DAWN_BUILD_DIR}/third_party/abseil/absl/debugging/${DAWN_LIB_SUBDIR}/absl_debugging_internal.lib"
+    "${DAWN_BUILD_DIR}/third_party/abseil/absl/debugging/${DAWN_LIB_SUBDIR}/absl_demangle_internal.lib"
+    "${DAWN_BUILD_DIR}/third_party/abseil/absl/debugging/${DAWN_LIB_SUBDIR}/absl_examine_stack.lib"
+    "${DAWN_BUILD_DIR}/third_party/abseil/absl/debugging/${DAWN_LIB_SUBDIR}/absl_failure_signal_handler.lib"
+    "${DAWN_BUILD_DIR}/third_party/abseil/absl/debugging/${DAWN_LIB_SUBDIR}/absl_leak_check.lib"
+    "${DAWN_BUILD_DIR}/third_party/abseil/absl/debugging/${DAWN_LIB_SUBDIR}/absl_stacktrace.lib"
+    "${DAWN_BUILD_DIR}/third_party/abseil/absl/debugging/${DAWN_LIB_SUBDIR}/absl_symbolize.lib"
+
+    # Abseil string libraries
+    "${DAWN_BUILD_DIR}/third_party/abseil/absl/strings/${DAWN_LIB_SUBDIR}/absl_cord.lib"
+    "${DAWN_BUILD_DIR}/third_party/abseil/absl/strings/${DAWN_LIB_SUBDIR}/absl_cordz_functions.lib"
+    "${DAWN_BUILD_DIR}/third_party/abseil/absl/strings/${DAWN_LIB_SUBDIR}/absl_cordz_handle.lib"
+    "${DAWN_BUILD_DIR}/third_party/abseil/absl/strings/${DAWN_LIB_SUBDIR}/absl_cordz_info.lib"
+    "${DAWN_BUILD_DIR}/third_party/abseil/absl/strings/${DAWN_LIB_SUBDIR}/absl_cordz_sample_token.lib"
+    "${DAWN_BUILD_DIR}/third_party/abseil/absl/strings/${DAWN_LIB_SUBDIR}/absl_cord_internal.lib"
+    "${DAWN_BUILD_DIR}/third_party/abseil/absl/strings/${DAWN_LIB_SUBDIR}/absl_strings.lib"
+    "${DAWN_BUILD_DIR}/third_party/abseil/absl/strings/${DAWN_LIB_SUBDIR}/absl_strings_internal.lib"
+    "${DAWN_BUILD_DIR}/third_party/abseil/absl/strings/${DAWN_LIB_SUBDIR}/absl_string_view.lib"
+    "${DAWN_BUILD_DIR}/third_party/abseil/absl/strings/${DAWN_LIB_SUBDIR}/absl_str_format_internal.lib"
+
+    # Abseil synchronization libraries
+    "${DAWN_BUILD_DIR}/third_party/abseil/absl/synchronization/${DAWN_LIB_SUBDIR}/absl_graphcycles_internal.lib"
+    "${DAWN_BUILD_DIR}/third_party/abseil/absl/synchronization/${DAWN_LIB_SUBDIR}/absl_kernel_timeout_internal.lib"
+    "${DAWN_BUILD_DIR}/third_party/abseil/absl/synchronization/${DAWN_LIB_SUBDIR}/absl_synchronization.lib"
+
+    # Abseil time libraries
+    "${DAWN_BUILD_DIR}/third_party/abseil/absl/time/${DAWN_LIB_SUBDIR}/absl_civil_time.lib"
+    "${DAWN_BUILD_DIR}/third_party/abseil/absl/time/${DAWN_LIB_SUBDIR}/absl_time.lib"
+    "${DAWN_BUILD_DIR}/third_party/abseil/absl/time/${DAWN_LIB_SUBDIR}/absl_time_zone.lib"
+
+    # Abseil status libraries
+    "${DAWN_BUILD_DIR}/third_party/abseil/absl/status/${DAWN_LIB_SUBDIR}/absl_status.lib"
+    "${DAWN_BUILD_DIR}/third_party/abseil/absl/status/${DAWN_LIB_SUBDIR}/absl_statusor.lib"
+
+    # Abseil numeric libraries
+    "${DAWN_BUILD_DIR}/third_party/abseil/absl/numeric/${DAWN_LIB_SUBDIR}/absl_int128.lib"
+
+    # Abseil types libraries
+    "${DAWN_BUILD_DIR}/third_party/abseil/absl/types/${DAWN_LIB_SUBDIR}/absl_bad_any_cast_impl.lib"
+    "${DAWN_BUILD_DIR}/third_party/abseil/absl/types/${DAWN_LIB_SUBDIR}/absl_bad_optional_access.lib"
+    "${DAWN_BUILD_DIR}/third_party/abseil/absl/types/${DAWN_LIB_SUBDIR}/absl_bad_variant_access.lib"
+
+    # SPIRV-Tools libraries
+    "${DAWN_BUILD_DIR}/third_party/spirv-tools/source/${DAWN_LIB_SUBDIR}/SPIRV-Tools.lib"
+    "${DAWN_BUILD_DIR}/third_party/spirv-tools/source/opt/${DAWN_LIB_SUBDIR}/SPIRV-Tools-opt.lib"
+
+    # DXC libraries (DirectX Shader Compiler)
+    "${DAWN_BUILD_DIR}/third_party/dxc/${DAWN_LIB_SUBDIR}/lib/dxcompiler.lib"
+    "${DAWN_BUILD_DIR}/third_party/dxc/${DAWN_LIB_SUBDIR}/lib/dxclib.lib"
+    "${DAWN_BUILD_DIR}/third_party/dxc/${DAWN_LIB_SUBDIR}/lib/dxcvalidator.lib"
+
+    # DXC LLVM core libraries
+    "${DAWN_BUILD_DIR}/third_party/dxc/${DAWN_LIB_SUBDIR}/lib/LLVMCore.lib"
+    "${DAWN_BUILD_DIR}/third_party/dxc/${DAWN_LIB_SUBDIR}/lib/LLVMSupport.lib"
+    "${DAWN_BUILD_DIR}/third_party/dxc/${DAWN_LIB_SUBDIR}/lib/LLVMAnalysis.lib"
+    "${DAWN_BUILD_DIR}/third_party/dxc/${DAWN_LIB_SUBDIR}/lib/LLVMBitReader.lib"
+    "${DAWN_BUILD_DIR}/third_party/dxc/${DAWN_LIB_SUBDIR}/lib/LLVMBitWriter.lib"
+    "${DAWN_BUILD_DIR}/third_party/dxc/${DAWN_LIB_SUBDIR}/lib/LLVMTransformUtils.lib"
+    "${DAWN_BUILD_DIR}/third_party/dxc/${DAWN_LIB_SUBDIR}/lib/LLVMInstCombine.lib"
+    "${DAWN_BUILD_DIR}/third_party/dxc/${DAWN_LIB_SUBDIR}/lib/LLVMScalarOpts.lib"
+    "${DAWN_BUILD_DIR}/third_party/dxc/${DAWN_LIB_SUBDIR}/lib/LLVMipo.lib"
+    "${DAWN_BUILD_DIR}/third_party/dxc/${DAWN_LIB_SUBDIR}/lib/LLVMVectorize.lib"
+    "${DAWN_BUILD_DIR}/third_party/dxc/${DAWN_LIB_SUBDIR}/lib/LLVMTarget.lib"
+    "${DAWN_BUILD_DIR}/third_party/dxc/${DAWN_LIB_SUBDIR}/lib/LLVMPasses.lib"
+    "${DAWN_BUILD_DIR}/third_party/dxc/${DAWN_LIB_SUBDIR}/lib/LLVMOption.lib"
+    "${DAWN_BUILD_DIR}/third_party/dxc/${DAWN_LIB_SUBDIR}/lib/LLVMProfileData.lib"
+    "${DAWN_BUILD_DIR}/third_party/dxc/${DAWN_LIB_SUBDIR}/lib/LLVMLinker.lib"
+    "${DAWN_BUILD_DIR}/third_party/dxc/${DAWN_LIB_SUBDIR}/lib/LLVMIRReader.lib"
+    "${DAWN_BUILD_DIR}/third_party/dxc/${DAWN_LIB_SUBDIR}/lib/LLVMAsmParser.lib"
+
+    # DXC DXIL libraries
+    "${DAWN_BUILD_DIR}/third_party/dxc/${DAWN_LIB_SUBDIR}/lib/LLVMDXIL.lib"
+    "${DAWN_BUILD_DIR}/third_party/dxc/${DAWN_LIB_SUBDIR}/lib/LLVMDxilContainer.lib"
+    "${DAWN_BUILD_DIR}/third_party/dxc/${DAWN_LIB_SUBDIR}/lib/LLVMDxilValidation.lib"
+    "${DAWN_BUILD_DIR}/third_party/dxc/${DAWN_LIB_SUBDIR}/lib/LLVMDxilHash.lib"
+    "${DAWN_BUILD_DIR}/third_party/dxc/${DAWN_LIB_SUBDIR}/lib/LLVMDxilCompression.lib"
+    "${DAWN_BUILD_DIR}/third_party/dxc/${DAWN_LIB_SUBDIR}/lib/LLVMDxilRootSignature.lib"
+    "${DAWN_BUILD_DIR}/third_party/dxc/${DAWN_LIB_SUBDIR}/lib/LLVMDxcSupport.lib"
+    "${DAWN_BUILD_DIR}/third_party/dxc/${DAWN_LIB_SUBDIR}/lib/LLVMDxcBindingTable.lib"
+    "${DAWN_BUILD_DIR}/third_party/dxc/${DAWN_LIB_SUBDIR}/lib/LLVMHLSL.lib"
+    "${DAWN_BUILD_DIR}/third_party/dxc/${DAWN_LIB_SUBDIR}/lib/LLVMMSSupport.lib"
+
+    # DXC Clang libraries
+    "${DAWN_BUILD_DIR}/third_party/dxc/${DAWN_LIB_SUBDIR}/lib/clangBasic.lib"
+    "${DAWN_BUILD_DIR}/third_party/dxc/${DAWN_LIB_SUBDIR}/lib/clangLex.lib"
+    "${DAWN_BUILD_DIR}/third_party/dxc/${DAWN_LIB_SUBDIR}/lib/clangParse.lib"
+    "${DAWN_BUILD_DIR}/third_party/dxc/${DAWN_LIB_SUBDIR}/lib/clangAST.lib"
+    "${DAWN_BUILD_DIR}/third_party/dxc/${DAWN_LIB_SUBDIR}/lib/clangSema.lib"
+    "${DAWN_BUILD_DIR}/third_party/dxc/${DAWN_LIB_SUBDIR}/lib/clangAnalysis.lib"
+    "${DAWN_BUILD_DIR}/third_party/dxc/${DAWN_LIB_SUBDIR}/lib/clangEdit.lib"
+    "${DAWN_BUILD_DIR}/third_party/dxc/${DAWN_LIB_SUBDIR}/lib/clangRewrite.lib"
+    "${DAWN_BUILD_DIR}/third_party/dxc/${DAWN_LIB_SUBDIR}/lib/clangDriver.lib"
+    "${DAWN_BUILD_DIR}/third_party/dxc/${DAWN_LIB_SUBDIR}/lib/clangCodeGen.lib"
+    "${DAWN_BUILD_DIR}/third_party/dxc/${DAWN_LIB_SUBDIR}/lib/clangFrontend.lib"
+  )
+
+  # Link all Dawn/Tint/Abseil libraries
+  target_link_libraries(onnxruntime-genai PRIVATE ${DAWN_LIBRARIES})
+
+  # Link Windows system libraries required by Dawn
+  if(WIN32)
+    target_link_libraries(onnxruntime-genai PRIVATE
+      user32.lib
+      dxguid.lib
+      kernel32.lib
+      gdi32.lib
+      winspool.lib
+      shell32.lib
+      ole32.lib
+      oleaut32.lib
+      uuid.lib
+      comdlg32.lib
+      advapi32.lib
+      onecore.lib
+    )
+  endif()
+
+  target_compile_definitions(onnxruntime-genai PRIVATE USE_WEBGPU)
+  list(LENGTH DAWN_LIBRARIES NUM_LIBRARIES)
+  message(STATUS "WebGPU support configured with ${NUM_LIBRARIES} Dawn/Tint/Abseil libraries")
+
+else()
+  message(STATUS "WebGPU support disabled")
+endif()
+
 # The genai library itself is always embedded in the shared library
 list(APPEND ortgenai_embed_libs "$<TARGET_FILE:onnxruntime-genai>")
 
