--- a/.pipelines/pypl-publishing.yml
+++ b/.pipelines/pypl-publishing.yml
@@ -20,7 +20,12 @@ parameters:
   default: true
 
 - name: enable_win_arm64_cpu
-  displayName: 'Whether Windows ARM64 package is built.'
+  displayName: 'Whether Windows ARM64 CPU package is built.'
+  type: boolean
+  default: true
+
+- name: enable_win_arm64_dml
+  displayName: 'Whether Windows ARM64 DirectML package is built.'
   type: boolean
   default: true
 
@@ -43,6 +48,11 @@ parameters:
   displayName: 'Whether MacOS CPU package is built.'
   type: boolean
   default: true
+
+- name: enable_winml
+  displayName: "Whether Windows WinML package is built for x64 and arm64"
+  type: boolean
+  default: false
 
 - name: cuda_versions
   displayName: 'CUDA versions'
@@ -94,9 +104,12 @@ extends:
         enable_win_cuda: ${{ parameters.enable_win_cuda }}
         enable_win_dml: ${{ parameters.enable_win_dml }}
         enable_win_arm64_cpu: ${{ parameters.enable_win_arm64_cpu }}
+        enable_win_arm64_dml: ${{ parameters.enable_win_arm64_dml }}
         enable_macos_cpu: ${{ parameters.enable_macos_cpu }}
+        enable_winml: ${{ parameters.enable_winml }}
         cuda_versions: ${{ parameters.cuda_versions }}
         build_config: ${{ parameters.build_config }}
+
     - ${{ if eq(parameters.enable_post_packaging_validation, true) }}:
       - template: stages/py-validation-stage.yml
         parameters:
@@ -106,6 +119,7 @@ extends:
           enable_win_cuda: ${{ parameters.enable_win_cuda }}
           enable_win_dml: ${{ parameters.enable_win_dml }}
           enable_win_arm64_cpu: ${{ parameters.enable_win_arm64_cpu }}
+          enable_win_arm64_dml: ${{ parameters.enable_win_arm64_dml }}
           enable_macos_cpu: ${{ parameters.enable_macos_cpu }}
           cuda_versions: ${{ parameters.cuda_versions }}
           SpecificArtifact: false
