--- a/.pipelines/stages/jobs/winml-nuget-packaging-job.yml
+++ b/.pipelines/stages/jobs/winml-nuget-packaging-job.yml
@@ -24,14 +24,14 @@ jobs:
     steps:
       - template: steps/utils/flex-download-pipeline-artifact.yml
         parameters:
-          StepName: "Download win-directml-arm64-capi capi Artifacts"
-          ArtifactName: onnxruntime-genai-win-directml-arm64-capi
+          StepName: "Download onnxruntime-genai-win-winml-arm64-capi Artifacts"
+          ArtifactName: onnxruntime-genai-win-winml-arm64-capi
           TargetPath: "$(Build.BinariesDirectory)/artifact-downloads"
 
       - template: steps/utils/flex-download-pipeline-artifact.yml
         parameters:
-          StepName: "Download onnxruntime-genai-win-cuda-x64-capi Artifacts"
-          ArtifactName: onnxruntime-genai-win-cuda-x64-capi
+          StepName: "Download onnxruntime-genai-win-winml-x64-capi Artifacts"
+          ArtifactName: onnxruntime-genai-win-winml-x64-capi
           TargetPath: "$(Build.BinariesDirectory)/artifact-downloads"
 
       - checkout: self
@@ -112,6 +112,10 @@ jobs:
           }
 
         displayName: "Extract Artifacts"
+        workingDirectory: "$(Build.BinariesDirectory)/artifact-downloads"
+
+      - script: |
+          dir /s /b *.dll
         workingDirectory: "$(Build.BinariesDirectory)/artifact-downloads"
 
       - task: UsePythonVersion@0
