--- a/.pipelines/pypl-publishing.yml
+++ b/.pipelines/pypl-publishing.yml
@@ -62,7 +62,7 @@ parameters:
 - name: build_config
   displayName: 'Build Configuration'
   type: string
-  default: 'release'
+  default: 'relwithdebinfo'
   values:
   - 'release'
   - 'relwithdebinfo'
