--- a/.pipelines/nuget-publishing.yml
+++ b/.pipelines/nuget-publishing.yml
@@ -63,6 +63,11 @@ parameters:
     type: string
     default: "1.22.0"
 
+  - name: ort_winml_version
+    displayName: "Microsoft.WindowsAppSDK.ML Version (should match CMakeList.txt)"
+    type: string
+    default: "1.8.1065-experimental"
+
   - name: ort_cuda_version
     displayName: "OnnxRuntime GPU version"
     type: string
@@ -72,11 +77,6 @@ parameters:
     displayName: "OnnxRuntime DML version"
     type: string
     default: "1.22.0"
-
-  - name: ort_winml_version
-    displayName: "Microsoft.WindowsAppSDK.ML (WinML)"
-    type: string
-    default: "1.8.1065-experimental"
 
   - name: cuda_version
     displayName: "CUDA version"
@@ -170,6 +170,8 @@ extends:
           build_config: ${{ parameters.build_config }}
           enable_win_qnn: ${{ parameters.enable_win_qnn }}
           nuget_version_type: ${{ parameters.nuget_version_type }}
+          enable_winml: ${{ parameters.enable_winml }}
+          ort_winml_version: ${{ parameters.ort_winml_version }}
 
       - ${{ if eq(parameters.enable_post_packaging_validation, true) }}:
         - template: stages/nuget-validation-stage.yml
