--- a/.pipelines/stages/jobs/nuget-packaging-job.yml
+++ b/.pipelines/stages/jobs/nuget-packaging-job.yml
@@ -119,6 +119,18 @@ jobs:
       value: 'Microsoft.WindowsAppSDK.ML'
 
   steps:
+  - ${{ if eq(parameters.enable_winml, true) }}:
+    - template: steps/utils/flex-download-pipeline-artifact.yml
+      parameters:
+        StepName: 'Download onnxruntime-genai-win-winml-x64-capi Artifacts'
+        ArtifactName: onnxruntime-genai-win-winml-x64-capi
+        TargetPath: '$(Build.BinariesDirectory)/artifact-downloads'
+    - template: steps/utils/flex-download-pipeline-artifact.yml
+      parameters:
+        StepName: 'Download onnxruntime-genai-win-winml-arm64-capi Artifacts'
+        ArtifactName: onnxruntime-genai-win-winml-arm64-capi
+        TargetPath: '$(Build.BinariesDirectory)/artifact-downloads'
+
   - ${{ if and(eq(parameters.enable_win_cpu, true), eq(parameters.ep, 'cpu')) }}:
     - template: steps/utils/flex-download-pipeline-artifact.yml
       parameters:
