--- a/.pipelines/stages/jobs/nuget-packaging-job.yml
+++ b/.pipelines/stages/jobs/nuget-packaging-job.yml
@@ -52,6 +52,11 @@ parameters:
   type: boolean
   default: false
 
+- name: enable_winml
+  displayName: 'Whether WinML nuget package should be built.'
+  type: boolean
+  default: false
+
 - name: ort_version
   type: string
 
@@ -86,8 +91,11 @@ jobs:
     ${{ else }}:
       value: 'MinSizeRel'
 
-  - name: artifactName
-    value: 'onnxruntime-genai-${{ parameters.ep }}-dep-qnn-${{ parameters.enable_win_qnn }}'
+  - name: nugetArtifactName
+    ${{ if and(eq(parameters.ep, 'winml'), eq(parameters.enable_winml, true)) }}:
+      value: 'onnxruntime-genai-winml'
+    ${{ else }}:
+      value: 'onnxruntime-genai-${{ parameters.ep }}-dep-qnn-${{ parameters.enable_win_qnn }}-nuget'
 
   - name: genai_nuget_package_name
     ${{ if and(eq(parameters.ep, 'cpu'), eq(parameters.enable_win_qnn, false)) }}:
@@ -98,6 +106,8 @@ jobs:
       value: 'Microsoft.ML.OnnxRuntimeGenAI.DirectML'
     ${{ if and(eq(parameters.ep, 'cpu'), eq(parameters.enable_win_qnn, true)) }}:
       value: 'Microsoft.ML.OnnxRuntimeGenAI.QNN'
+    ${{ if and(eq(parameters.ep, 'winml'), eq(parameters.enable_winml, true)) }}:
+      value: 'Microsoft.ML.OnnxRuntimeGenAI.WinML'
 
   - name: ort_nuget_package_name
     ${{ if and(eq(parameters.ep, 'cpu'), eq(parameters.enable_win_qnn, false)) }}:
@@ -108,8 +118,22 @@ jobs:
       value: 'Microsoft.ML.OnnxRuntime.DirectML'
     ${{ if and(eq(parameters.ep, 'cpu'), eq(parameters.enable_win_qnn, true)) }}:
       value: 'Microsoft.ML.OnnxRuntime.QNN'
+    ${{ if and(eq(parameters.ep, 'winml'), eq(parameters.enable_winml, true)) }}:
+      value: 'Microsoft.WindowsAppSDK.ML'
 
   steps:
+  - ${{ if eq(parameters.enable_winml, true) }}:
+    - template: steps/utils/flex-download-pipeline-artifact.yml
+      parameters:
+        StepName: 'Download onnxruntime-genai-win-winml-x64-capi Artifacts'
+        ArtifactName: onnxruntime-genai-win-winml-x64-capi
+        TargetPath: '$(Build.BinariesDirectory)/artifact-downloads'
+    - template: steps/utils/flex-download-pipeline-artifact.yml
+      parameters:
+        StepName: 'Download onnxruntime-genai-win-winml-arm64-capi Artifacts'
+        ArtifactName: onnxruntime-genai-win-winml-arm64-capi
+        TargetPath: '$(Build.BinariesDirectory)/artifact-downloads'
+
   - ${{ if and(eq(parameters.enable_win_cpu, true), eq(parameters.ep, 'cpu')) }}:
     - template: steps/utils/flex-download-pipeline-artifact.yml
       parameters:
@@ -204,12 +228,18 @@ jobs:
       dotnet workload install macos
     displayName: 'Install dependencies'
     workingDirectory: '$(Build.Repository.LocalPath)\src\csharp'
+    env:
+      AZURE_DEVOPS_EXT_PAT: $(NUGET_PAT_WCR)
+      NuGetPackageSourceCredentials_TheFeed: 'Username=me;Password=$(NUGET_PAT_WCR)'
 
   - powershell: |
       dotnet --info
       dotnet build Microsoft.ML.OnnxRuntimeGenAI.csproj -p:Configuration="$(buildConfig)" -p:IncludeMobileTargets=true --verbosity normal
     displayName: 'Build CSharp'
     workingDirectory: '$(Build.Repository.LocalPath)\src\csharp'
+    env:
+      AZURE_DEVOPS_EXT_PAT: $(NUGET_PAT_WCR)
+      NuGetPackageSourceCredentials_TheFeed: 'Username=me;Password=$(NUGET_PAT_WCR)'
 
   - task: BinSkim@4
     displayName: 'Run BinSkim'
@@ -280,6 +310,9 @@ jobs:
 
     displayName: 'Extract Artifacts & Prepare Native Libraries'
     workingDirectory: '$(Build.BinariesDirectory)/artifact-downloads'
+    env:
+      AZURE_DEVOPS_EXT_PAT: $(NUGET_PAT_WCR)
+      NuGetPackageSourceCredentials_TheFeed: 'Username=me;Password=$(NUGET_PAT_WCR)'
 
   - task: UsePythonVersion@0
     inputs:
@@ -300,6 +333,9 @@ jobs:
       cat $(Build.Repository.LocalPath)\nuget\$(genai_nuget_package_name).nuspec
 
     displayName: 'Generate Nuspec for native'
+    env:
+      AZURE_DEVOPS_EXT_PAT: $(NUGET_PAT_WCR)
+      NuGetPackageSourceCredentials_TheFeed: 'Username=me;Password=$(NUGET_PAT_WCR)'
 
   - task: NuGetCommand@2
     displayName: 'Nuget Packaging'
@@ -323,7 +359,7 @@ jobs:
       DoEsrp: 'true'
 
   - task: 1ES.PublishPipelineArtifact@1
-    displayName: 'Publish Artifact: ONNXRuntime Genai NuGet'
+    displayName: 'Publish Artifact: Genai NuGet'
     inputs:
       targetPath: '$(Build.ArtifactStagingDirectory)\nuget'
-      artifactName: $(artifactName)-nuget
+      artifactName: $(nugetArtifactName)
