--- a/.pipelines/pypl-publishing.yml
+++ b/.pipelines/pypl-publishing.yml
@@ -20,7 +20,12 @@ parameters:
   default: true
 
 - name: enable_win_arm64_cpu
-  displayName: 'Whether Windows ARM64 package is built.'
+  displayName: 'Whether Windows ARM64 CPU package is built.'
+  type: boolean
+  default: true
+
+- name: enable_win_arm64_dml
+  displayName: 'Whether Windows ARM64 DirectML package is built.'
   type: boolean
   default: true
 
@@ -44,6 +49,16 @@ parameters:
   type: boolean
   default: true
 
+- name: enable_winml
+  displayName: "Whether Windows WinML package is built for x64 and arm64"
+  type: boolean
+  default: false
+
+- name: ort_winml_version
+  displayName: "Microsoft.WindowsAppSDK.ML Version (should match CMakeList.txt)"
+  type: string
+  default: "1.8.1075-preview-g295f112894"
+
 - name: cuda_versions
   displayName: 'CUDA versions'
   type: string
@@ -52,9 +67,8 @@ parameters:
 - name: build_config
   displayName: 'Build Configuration'
   type: string
-  default: 'release'
+  default: 'relwithdebinfo'
   values:
-  - 'release'
   - 'relwithdebinfo'
   - 'debug'
 
@@ -94,9 +108,16 @@ extends:
         enable_win_cuda: ${{ parameters.enable_win_cuda }}
         enable_win_dml: ${{ parameters.enable_win_dml }}
         enable_win_arm64_cpu: ${{ parameters.enable_win_arm64_cpu }}
+        enable_win_arm64_dml: ${{ parameters.enable_win_arm64_dml }}
         enable_macos_cpu: ${{ parameters.enable_macos_cpu }}
         cuda_versions: ${{ parameters.cuda_versions }}
         build_config: ${{ parameters.build_config }}
+        enable_winml: ${{ parameters.enable_winml }}
+        ${{ if eq(parameters.enable_winml, true) }}:
+          ort_version: ${{ parameters.ort_winml_version }}
+        ${{ else }}:
+          ort_version: '' # Not used for non winml builds.
+
     - ${{ if eq(parameters.enable_post_packaging_validation, true) }}:
       - template: stages/py-validation-stage.yml
         parameters:
@@ -106,6 +127,7 @@ extends:
           enable_win_cuda: ${{ parameters.enable_win_cuda }}
           enable_win_dml: ${{ parameters.enable_win_dml }}
           enable_win_arm64_cpu: ${{ parameters.enable_win_arm64_cpu }}
+          enable_win_arm64_dml: ${{ parameters.enable_win_arm64_dml }}
           enable_macos_cpu: ${{ parameters.enable_macos_cpu }}
           cuda_versions: ${{ parameters.cuda_versions }}
           SpecificArtifact: false
