--- a/.pipelines/stages/nuget-packaging-stage.yml
+++ b/.pipelines/stages/nuget-packaging-stage.yml
@@ -51,10 +51,13 @@ parameters:
 
 - name: ort_version
   type: string
+
 - name: ort_cuda_version
   type: string
+
 - name: ort_dml_version
   type: string
+
 - name: build_config
   type: string
   default: 'release'
@@ -62,6 +65,9 @@ parameters:
 - name: nuget_version_type
   type: string
   default: 'stable'
+
+- name: enable_winml
+  type: boolean
 
 stages:
 - stage: nuget_packaging
@@ -109,4 +115,12 @@ stages:
           enable_android: false
           enable_apple_framework: false
           enable_win_qnn: true
+          nuget_version_type: ${{ parameters.nuget_version_type }}
+    - ${{ if eq(parameters.enable_winml, true) }}:
+      - template: jobs/nuget-packaging-job.yml
+        parameters:
+          ep: 'winml'
+          enable_winml: true
+          ort_version: ${{ parameters.ort_version }}
+          build_config: ${{ parameters.build_config }}
           nuget_version_type: ${{ parameters.nuget_version_type }}
