--- a/nuget.config
+++ b/nuget.config
@@ -1,16 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <solution>
-    <add key="disableSourceControlIntegration" value="true" />
-  </solution>
-    <packageRestore>
-        <!--Allow NuGet to download missing packages -->
-        <add key="enabled" value="True" />
-        <!-- Automatically check for missing packages during build in Visual Studio -->
-        <add key="automatic" value="True" />
-    </packageRestore>
     <packageSources>
         <clear/>
+        <add key="localpackages" value=".\.winml\localpackages" />
         <add key="ORT-Nightly" value="https://aiinfra.pkgs.visualstudio.com/PublicPackages/_packaging/ORT-Nightly/nuget/v3/index.json" />
     </packageSources>
 </configuration>
