--- a/nuget.config
+++ b/nuget.config
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <packageSources>
-        <clear/>
+        <!-- <clear/> -->
         <add key="localpackages" value=".\.winml\localpackages" />
-        <add key="ORT-Nightly" value="https://aiinfra.pkgs.visualstudio.com/PublicPackages/_packaging/ORT-Nightly/nuget/v3/index.json" />
+        <!-- <add key="ORT-Nightly" value="https://aiinfra.pkgs.visualstudio.com/PublicPackages/_packaging/ORT-Nightly/nuget/v3/index.json" /> -->
     </packageSources>
 </configuration>
